@@ -140,6 +140,7 @@ wxMSW:
   creating a DIB and not DDB in wxBitmap(const wxImage&) ctor.
 - Fix the bug with wxFileDialog not being shown at all if the default file name
   was invalid.
+- Fix hang in keyboard navigation code with radio buttons under Windows 2000.
 
 wxGTK:
 
